--- a/src/app/AdminPanel/pages/route-master/route-list/route-list.component.html
+++ b/src/app/AdminPanel/pages/route-master/route-list/route-list.component.html
@@ -47,13 +47,11 @@
   <div class="col-sm-12">
     <app-card [classHeader]="true" [blockClass]="'table-border-style'">
       <div class="table-responsive">
-        <p>
-          <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-          <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
-            (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
+        <!-- <p>
+          <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
         </p>
         <br />
-        <br />
+        <br /> -->
 
         <p-table class="" #dt [value]="routeMaster" [(selection)]="selectedRouteMaster" dataKey="id" [autoLayout]="true"
           styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true"
