--- a/src/app/AdminPanel/pages/pincode-master/pincode-list/pincode-list.component.html
+++ b/src/app/AdminPanel/pages/pincode-master/pincode-list/pincode-list.component.html
@@ -49,28 +49,28 @@
   <div class="col-sm-12">
       <app-card [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
-            <p>
-              <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
+            <!-- <p>
+              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
             </p>
               <br/>
-              <br/>
+              <br/> -->
 
-            <p-table class="" #dt [value]="pincodeMaster" [(selection)]="selectedPincodeMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['Pincode']">
+            <p-table class="" #dt [value]="pincodeMaster" [(selection)]="selectedPincodeMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0"
+            [globalFilterFields]="['PincodeDesc']">
               <ng-template pTemplate="caption">
                 <div class="table-header-p ">
-                    <!-- <span class="p-input-icon-left">
+                    <span class="p-input-icon-left">
                         <i class="pi pi-search"></i>
                         <input class="p-l-30 form-control" pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
-                    </span> -->
-                    <span><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
+                    </span>
+                    <span ><a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a></span>
                 </div>
               </ng-template>
               <br/>
               <br/>
               <ng-template pTemplate="header">
               <tr>
-                  <th pSortableColumn="Pincode">Pincode<p-sortIcon field="Pincode"></p-sortIcon></th>
+                  <th pSortableColumn="PincodeDesc">Pincode<p-sortIcon field="PincodeDesc"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
                   <th >Action </th>
               </tr>
