--- a/src/app/AdminPanel/pages/state-master/state-list/state-list.component.html
+++ b/src/app/AdminPanel/pages/state-master/state-list/state-list.component.html
@@ -108,18 +108,16 @@
             <div class="col-sm-12">
               <app-card [title]="'City Master'" [classHeader]="true" [blockClass]="'table-border-style'">
                 <div class="table-responsive">
-                  <p>
-                    <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-                    <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer"
-                      (click)="addNewRow()"><span class="font-d"> Add New</span></a> -->
+                  <!-- <p>
+                    <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addNewRow()"><span class="font-d"> Add New</span></a>
                   </p>
                   <br />
-                  <br />
+                  <br /> -->
                   <p-table class="" #dts [value]="cityMaster" [(selection)]="selectedCityMaster" dataKey="id"
                     [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="5"
                     [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,20]" [loading]="loading"
                     [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                    [filterDelay]="0" [globalFilterFields]="['City_Name','City_Code']">
+                    [filterDelay]="0" [globalFilterFields]="['City_Name','City_Code','Post_Code']">
                     <ng-template pTemplate="caption">
                       <div class="table-header-p ">
                         <span class="p-input-icon-left">
