--- a/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
+++ b/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
@@ -108,14 +108,14 @@
   <div class="col-sm-12">
       <app-card [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
-            <p>
-              <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <!-- <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a> -->
+            <!-- <p>
+              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
             </p>
               <br/>
-              <br/>
+              <br/> -->
 
-            <p-table class="" #dt [value]="vehicleMaster" [(selection)]="selectedVehicleMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0" [globalFilterFields]="['Vehicle_No','Vehicle_TypeDesc','Vehicle_CategoryDesc']">
+            <p-table class="" #dt [value]="vehicleMaster" [(selection)]="selectedVehicleMaster" dataKey="id" [autoLayout]="true" styleClass="p-datatable-d" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [filterDelay]="0"
+            [globalFilterFields]="['Vehicle_No','Vehicle_TypeDesc','Vehicle_CategoryDesc','MeasurementDesc']">
               <ng-template pTemplate="caption">
                 <div class="table-header-p ">
                     <span class="p-input-icon-left">
