--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -3,7 +3,7 @@
     <!-- slider Area Start-->
     <ngb-carousel (slide)="slideActivate($event)" class="myclass">
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
+        <div class="picsum-img-wrapper slide-m">
           <img src="assets/img/slider/grosary1.png" alt="Angular Carousel 1" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
@@ -12,21 +12,19 @@
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
+        <div class="picsum-img-wrapper slide-m">
           <img src="assets/img/slider/grosary2.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-          <!-- <h3>Title Goes Here</h3>
-          <p>Consectetur tortor volutpat pretium.</p> -->
+
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="picsum-img-wrapper">
+        <div class="picsum-img-wrapper slide-m">
           <img src="assets/img/slider/grosary3.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-          <!-- <h3>Title Goes Here</h3>
-          <p>Consectetur tortor volutpat pretium.</p> -->
+
         </div>
       </ng-template>
     </ngb-carousel>
@@ -52,7 +50,7 @@
                           <!-- /.image-->
                           <div class="text">
                               <h3><a>{{prod.Item_Name}}</a></h3>
-                              <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
+                              <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{currency}}{{prod.Price}}</span></p>
 
                               <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
 
