--- a/src/app/clientside/clientpages/login_client/login_client.component.scss
+++ b/src/app/clientside/clientpages/login_client/login_client.component.scss
@@ -56,3 +56,17 @@ h4 {
 .footer p{
     font-size: 18px;
 }
+
+// .footer {
+//   /* background: #f8f9fa;
+//   padding: 60px 0 */
+//   background: #f3f3f3;
+//   padding: 30px 0px 0px 0px;
+
+//   position: absolute;
+//   bottom: 0;
+//   width: 100%;
+//   /* height: 60px; */
+//   line-height: 60px;
+//   background-color: #f5f5f5;
+// }
