--- a/src/assets/client/css/style.default.css
+++ b/src/assets/client/css/style.default.css
@@ -1476,8 +1476,12 @@ a, button {
 }
 
 #footer {
-    background: #f8f9fa;
-    padding: 60px 0
+    /* background: #f8f9fa;
+    padding: 60px 0 */
+    background: #f3f3f3;
+    padding: 30px 0px 0px 0px;
+    position: absolute;
+    width: 100%;
 }
 
     #footer ul {
