Footer position changes

--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -179,7 +179,7 @@
   </div>
 </div>
 
-<div class="container mt-2">
+<div class="container mt-2" style ="margin-bottom: 60px;">
 
   <div class="box text-center">
     <h3 class="text-uppercase">See our new items
