--- a/src/assets/client/css/style.default.css
+++ b/src/assets/client/css/style.default.css
@@ -1478,10 +1478,22 @@ a, button {
 #footer {
     /* background: #f8f9fa;
     padding: 60px 0 */
-    background: #f3f3f3;
+    /* background: #f3f3f3;
     padding: 30px 0px 0px 0px;
     position: absolute;
+    width: 100%; */
+
+
+    background: #f3f3f3;
+    /* padding: 30px 0px 0px 0px; */
+    position: fixed;
+    bottom: 0;
     width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+    z-index: 10;
+    /* display: contents; */
 }
 
     #footer ul {
