--- a/src/app/clientside/clientpages/checkout/checkout.component.html
+++ b/src/app/clientside/clientpages/checkout/checkout.component.html
@@ -16,7 +16,7 @@
               </div>
           </div>
           <div class="row">
-              <div id="checkout" class="col-lg-9">
+              <div id="checkout" class="col-lg-8">
                   <div class="box">
                       <form method="get" action="checkout2.html">
 
@@ -151,7 +151,7 @@
                               </div>
                           </div>
                           </div>
-                          <div class="box-footer">
+                          <div class="box-footer m-b-60">
                             <div class="pull-left"><a href="/shoppingcart" class="btn btn-outline-white-secondary"><i class="fa fa-chevron-left"></i>Back to basket</a></div>
                             <div class="pull-right">
                               <button type="submit" class="btn btn-outline-white-primary" (click)="GotoNextmethod('address')">Continue to Delivery Method<i class="fa fa-chevron-right"></i></button>
@@ -182,7 +182,7 @@
                               </div>
                           </div>
 
-                          <div class="box-footer">
+                          <div class="box-footer m-b-60">
                             <div class="pull-left"><a  class="btn btn-outline-white-secondary" (click)="GotoPremethod('delivery')"><i class="fa fa-chevron-left"></i>Back to Addresses</a></div>
                             <div class="pull-right">
                               <button type="submit" class="btn btn-outline-white-primary" (click)="GotoNextmethod('delivery')">Continue to Payment Method<i class="fa fa-chevron-right"></i></button>
@@ -222,7 +222,7 @@
                               </div>
                           </div>
 
-                          <div class="box-footer">
+                          <div class="box-footerv m-b-60">
                             <div class="pull-left"><a  class="btn btn-outline-white-secondary" (click)="GotoPremethod('payment')"><i class="fa fa-chevron-left"></i>Back to Shipping method</a></div>
                             <div class="pull-right">
                               <button type="submit" class="btn btn-outline-white-primary" (click)="GotoNextmethod('payment')">Continue to Order review<i class="fa fa-chevron-right"></i></button>
@@ -255,9 +255,9 @@
                                         <td><a href="#">{{product.Item_Name}}</a></td>
                                         <td>{{product.OrderQty}}
                                         </td>
-                                        <td>${{product.Price}}</td>
-                                        <td>$0.00</td>
-                                        <td>  ${{product.TotalPrice}}</td>
+                                        <td>{{currency}}{{product.Price.toFixed(2)}}</td>
+                                        <td>{{currency}}0.00</td>
+                                        <td>  {{currency}}{{product.TotalPrice.toFixed(2)}}</td>
                                         <td></td>
                                 </tr>
 
@@ -267,7 +267,7 @@
                                     <tfoot>
                                       <tr>
                                         <th colspan="5">Total</th>
-                                        <th colspan="2">${{Subtotal}}</th>
+                                        <th colspan="2">{{currency}}{{Subtotal.toFixed(2)}}</th>
                                       </tr>
                                     </tfoot>
                                   </table>
@@ -276,7 +276,7 @@
                                 <!-- /.box-->
                             </div>
 
-                            <div class="box-footer">
+                            <div class="box-footer m-b-60">
                               <div class="pull-left"><a  class="btn btn-outline-white-secondary" (click)="GotoPremethod('orderview')"><i class="fa fa-chevron-left"></i>Back to Payment method</a></div>
                               <div class="pull-right">
                                 <button type="submit" class="btn btn-outline-white-primary">Place an order<i class="fa fa-chevron-right"></i></button>
@@ -393,9 +393,9 @@
                                           <td><a href="#">{{product.Item_Name}}</a></td>
                                           <td>{{product.OrderQty}}
                                           </td>
-                                          <td>${{product.Price}}</td>
-                                          <td>$0.00</td>
-                                          <td>  ${{product.TotalPrice}}</td>
+                                          <td>{{currency}}{{product.Price.toFixed(2)}}</td>
+                                          <td>{{currency}}0.00</td>
+                                          <td>  {{currency}}{{product.TotalPrice.toFixed(2)}}</td>
                                           <td></td>
                                   </tr>
 
@@ -405,7 +405,7 @@
                                       <tfoot>
                                         <tr>
                                           <th colspan="5">Total</th>
-                                          <th colspan="2">${{Subtotal}}</th>
+                                          <th colspan="2">{{currency}}{{Subtotal.toFixed(2)}}</th>
                                         </tr>
                                       </tfoot>
                                     </table>
@@ -433,7 +433,7 @@
               </div>
               <!-- /.col-lg-9-->
                <!-- /.col-lg-9-->
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <div id="order-summary" class="box">
             <div class="box-header">
               <h3>Order summary</h3>
@@ -444,25 +444,25 @@
                 <tbody>
                   <tr>
                     <td>Order subtotal</td>
-                    <th>${{Subtotal}}</th>
+                    <th>{{currency}}{{Subtotal.toFixed(2)}}</th>
                   </tr>
                   <tr>
                     <td>Shipping and handling</td>
-                    <th>${{shippingcharge}}</th>
+                    <th>{{currency}}{{shippingcharge.toFixed(2)}}</th>
                   </tr>
                   <tr>
                     <td>Tax</td>
-                    <th>$0.00</th>
+                    <th>{{currency}}0.00</th>
                   </tr>
                   <tr class="total">
                     <td>Total</td>
-                    <th>${{Grandtotal}}</th>
+                    <th>{{currency}}{{Grandtotal.toFixed(2)}}</th>
                   </tr>
                 </tbody>
               </table>
             </div>
           </div>
-          <div class="box">
+          <!-- <div class="box">
             <div class="box-header">
               <h4>Coupon code</h4>
             </div>
@@ -473,8 +473,7 @@
                   <button type="button" class="btn btn-outline-primary"> <i class="fa fa-gift"></i></button>
                 </div>
               </div>
-              <!-- /input-group-->
-          </div>
+          </div> -->
         </div>
         <!-- /.col-lg-3-->
           </div>
