--- a/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
+++ b/src/app/clientside/clientpages/shoppingcart/shoppingcart.component.html
@@ -84,7 +84,7 @@
               </div>
           </div>
           <!-- /.box-->
-          <div class="row">
+          <div class="row m-b-60">
             <div class="col-md-3">
               <div class="box">
                 <h3>You may also like these products</h3>
